--- a/front-end/package.json
+++ b/front-end/package.json
@@ -41,6 +41,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.23",
     "prettier": "^2.8.4",
+    "sass": "^1.62.0",
     "tailwindcss": "^3.3.1",
     "typescript": "~4.8.4",
     "unplugin-auto-import": "^0.15.3",
